# stumpy

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py
stumpy/: __init__.py  __meta__.py  axis.py  histogram.py  jupyter.py  plotting.py  utils.py
stumpy/graphics/: __init__.py
tests/: test_axis.py  test_hist_axis.py  test_histogram.py
