
[flake8]
ignore = D203
max-complexity = 10
max-line-length = 95

[tool:pytest]
addopts = tests
minversion = 3.0
flake8-max-line-length = 99
# min-version = 3.0

[metadata]
name = stumpy
description = Package connecting ROOT and numpy
long-description = file: README.rst
long-description.content-type = rst
platforms = all
classifiers =
    Development Status :: 1 - Planning,
    Operating System :: OS Independent,
    License :: OSI Approved :: BSD License,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.5,
    Programming Language :: Python :: 3.6,
    Topic :: Internet :: WWW/HTTP,
    Topic :: Scientific/Engineering :: Physics,
    Topic :: Scientific/Engineering :: Visualization,
    Natural Language :: English,

[options]
zip_safe = False
packages = find:
install-requires =
    numpy
tests-require =
    pytest > 3
    pytest-asyncio
setup-requires =
    setuptools
    pytest-runner

[options.packages.find]
exclude = tests
